<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.lupaPassword.LupaPasswordActivity">

    <TextView
        android:id="@+id/text_forgetpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:fontFamily="@font/pt_sans"
        android:textColor="@color/blue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/email"
        android:textSize="14sp"
        android:layout_marginHorizontal="35dp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/text_forgetpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/input_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="5dp"
        android:fontFamily="sans-serif"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="20sp"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_height="50sp"
        android:background="@drawable/custom_input"
        android:textAppearance="@style/tab_text"
        android:fontFamily="@font/pt_sans"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/input_email_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:text="@string/copyright_text"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>