<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.auth.signup.SignUpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/name"
        android:textSize="14sp"
        android:fontFamily="@font/pt_sans"
        android:layout_marginHorizontal="35dp"
        android:textColor="@color/blue"
        />

    <EditText
        android:id="@+id/input_name_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:fontFamily="@font/pt_sans"
        android:textSize="14sp"
        android:padding="12dp"
        android:background="@drawable/custom_input"
        android:layout_marginHorizontal="35dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/pt_sans"
        android:text="@string/email"
        android:textSize="14sp"
        android:layout_marginHorizontal="35dp"
        android:textColor="@color/blue"
        />

    <EditText
        android:id="@+id/input_email_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:fontFamily="@font/pt_sans"
        android:textSize="14sp"
        android:padding="12dp"
        android:background="@drawable/custom_input"
        android:layout_marginHorizontal="35dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/pt_sans"
        android:text="@string/password"
        android:textSize="14sp"
        android:layout_marginHorizontal="35dp"
        android:textColor="@color/blue"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="45sp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginHorizontal="35dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:background="@drawable/custom_input"
            android:padding="12dp"
            android:textSize="14sp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/pt_sans"
        android:text="@string/confirm_password"
        android:textSize="14sp"
        android:layout_marginHorizontal="35dp"
        android:textColor="@color/blue"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginHorizontal="35dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_confirm_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:background="@drawable/custom_input"
            android:padding="12dp"
            android:textSize="14sp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="35dp"
        android:layout_height="50sp"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:textAppearance="@style/tab_text"
        android:fontFamily="@font/pt_sans"
        android:text="Daftar"
        android:textStyle="bold"
        />

    <TableLayout
        android:layout_marginHorizontal="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="3">

        <TableRow
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:text="@string/or"
                android:layout_marginHorizontal="2sp"
                android:fontFamily="@font/pt_sans"
                />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:layout_marginHorizontal="2sp"
                android:text="@string/masuk_btn"
                android:textStyle="bold"
                android:fontFamily="@font/pt_sans"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:text="disini"
                android:layout_marginHorizontal="2sp"
                android:fontFamily="@font/pt_sans"
                />
        </TableRow>

    </TableLayout>


</LinearLayout>